--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,12 @@ Changelog
 4.4 (unreleased)
 ----------------
 
-- fix import step dependencies [kiorky]
-- moved to github [petschki]
+- fix import step dependencies
+  [kiorky]
+- fix icon_expr for portal types
+  [petschki]
+- moved to github
+  [petschki]
 
 4.3 (2012-01-24)
 ----------------
