added italian translations and relaunched i18ndude script

--- a/src/Products/SimpleAttachment/locales/it/LC_MESSAGES/simpleattachment.po
+++ b/src/Products/SimpleAttachment/locales/it/LC_MESSAGES/simpleattachment.po
@@ -1,94 +1,101 @@
+# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
+# SOME DESCRIPTIVE TITLE.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"PO-Revision-Date: 2011-08-11 06:46+0000\n"
-"Last-Translator: Jean-Paul Ladage <info@zestsoftware.nl>\n"
+"POT-Creation-Date: 2013-11-14 15:47+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: nl\n"
-"Language-Name: Nederlands\n"
+"Language-Code: en\n"
+"Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: simpleattachment\n"
 
+#: ./extenders.py:37
+msgid ""
+msgstr ""
+
 #: ./profiles/default/types/FileAttachment.xml
 msgid "A file attachment"
-msgstr "Een bijlage (bestand)"
+msgstr "Un file allegato"
 
 #: ./profiles/default/types/ImageAttachment.xml
 msgid "A image attachment"
-msgstr "Een bijlage (afbeelding)"
+msgstr "Un'immagine allegata"
 
 #: ./profiles/default/types/FileAttachment.xml
 msgid "Attached file"
-msgstr "Bijlage"
+msgstr "File allegato"
 
 #: ./profiles/default/types/ImageAttachment.xml
 msgid "Attached image"
-msgstr "Bijlage (afbeelding)"
+msgstr "Immagine allegata"
 
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:144
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:148
 msgid "Change titles"
-msgstr "Titels wijzigen"
+msgstr "Modifica titoli"
 
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:156
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:160
 msgid "Delete selected"
-msgstr "Geselecteerde item verwijderen"
+msgstr "Rimuovi selezionati"
 
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:150
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:154
 msgid "Move first"
-msgstr "Verplaats naar boven"
+msgstr "Sposta in cima"
 
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:203
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:207
 msgid "Upload"
-msgstr "Uploaden"
+msgstr "Carica"
 
 #. Default: "Once an image is uploaded, you can refer to it in your body text by its filename."
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:214
 msgid "help_widget_imagesmanager_upload"
-msgstr "Na het uploaden van eenen afbeelding, kunt u met de bestandsnaam hiernaar linken in de hoofdtekst"
+msgstr "Una volta che l'immagine è caricata, puoi linkarla nel testo con il suo filename."
 
 #. Default: "Select an attachment to add and click 'Upload'"
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:190
 msgid "help_widgetattachmentsmanager_attachment"
-msgstr "Selecteer een bijlage en klik op 'Uploaden'"
+msgstr "Seleziona un allegato da aggiungere e clicca su 'Upload'"
 
 #. Default: "Enter a title for the attachment"
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:175
 msgid "help_widgetattachmentsmanager_title"
-msgstr "Vul een titel in voor de bijlage"
+msgstr "Inserisci il titolo per l'allegato"
 
 #. Default: "Once an attachment is uploaded, you can refer to it in your body text by its filename."
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:210
 msgid "help_widgetattachmentsmanager_upload"
-msgstr "Na het uploaden van een bestand, kunt u met de bestandsnaam hiernaar linken in de hoofdtekst"
+msgstr "Una volta che l'allegato è caricato, puoi linkarlo nel testo con il suo filename."
 
 #. Default: "Select an image to add and click 'Upload'"
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:194
 msgid "help_widgetimagesmanager_images"
-msgstr "Selecteer een afbeelding en klik op 'Uploaden'"
+msgstr "Seleziona un'immagine da aggiungere e clicca 'Upload'"
 
 #. Default: "Enter a title for the image"
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:179
 msgid "help_widgetimagesmanager_title"
-msgstr "Vul een titel in voor de afbeelding"
+msgstr "Inserisci il titolo per l'immagine"
 
 #. Default: "Click here to get the file"
 #: ./skins/simpleattachment/fileattachment_view.pt:39
 msgid "label_click_to_get_file"
-msgstr "Klik hier om het bestand te downloaden"
+msgstr "Clicca qui per scaricare il file"
 
 #. Default: "Click to view full-size image…"
 #: ./skins/simpleattachment/imageattachment_view.pt:41
 msgid "label_click_to_view_full_image"
-msgstr "Klik hier om het bestand te downloaden"
+msgstr "Clicca per visualizzare l'immagine a dimensione naturale…"
 
 #. Default: "File"
 #: ./extenders.py:36
@@ -98,65 +105,65 @@ msgstr ""
 #. Default: "File type"
 #: ./skins/simpleattachment/fileattachment_view.pt:61
 msgid "label_file_type"
-msgstr "Bestandstype"
+msgstr "Tipo di file"
 
 #. Default: "Image"
 #: ./extenders.py:70
 msgid "label_image"
-msgstr ""
+msgstr "Immagine"
 
 #. Default: "Go to the document this image is attached to."
 #: ./skins/simpleattachment/imageattachment_view.pt:16
 msgid "label_link_to_origin"
-msgstr "Ga naar het document waar deze afbeelding een bijlage van is."
+msgstr "Vai al contenuto in cui questa immagine è allegata."
 
 #. Default: "Size"
 #: ./skins/simpleattachment/imageattachment_view.pt:48
 msgid "label_size"
-msgstr "Grootte"
+msgstr "Dimensione"
 
 #. Default: "Add attachment to document"
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:172
 msgid "label_widgetattachmentsmanager_title"
-msgstr "Voeg bijlage to aan document"
+msgstr "Aggiungi allegato al contenuto"
 
 #. Default: "Add image to document"
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:176
 msgid "label_widgetimagesmanager_title"
-msgstr "Voeg afbeelding to aan document"
+msgstr "Aggiungi immagine al contenuto"
 
 #. Default: "Attachments"
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:20
 msgid "legend_attachments"
-msgstr "Bijlagen"
+msgstr "Allegati"
 
 #. Default: "Images"
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:20
 msgid "legend_images"
-msgstr "Afbeeldingen"
+msgstr "Immagini"
 
 #. Default: "Blob Migration"
 #: ./migration/migration.pt:10
 msgid "migration_title"
-msgstr ""
+msgstr "Migrazione ai blob"
 
 #. Default: "(No file has been uploaded yet)"
 #: ./skins/simpleattachment/fileattachment_view.pt:55
 msgid "no_file_uploaded"
-msgstr "(Er is nog geen bestand geüpload)"
+msgstr "(Nessun file è stato ancora caricato)"
 
 #. Default: "(No image has been uploaded yet)"
 #: ./skins/simpleattachment/imageattachment_view.pt:55
 msgid "no_image_uploaded"
-msgstr "(Er is nog geen afbeelding geüpload)"
+msgstr "(Nessuna immagine è stata ancora caricata)"
 
 #. Default: "Attachment management controls"
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:95
 msgid "title_widgetattachmentsmanager"
-msgstr "Bijlagen beheren"
+msgstr "Gestione degli allegati"
 
 #. Default: "Image management controls"
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:98
 msgid "title_widgetimagesmanager"
-msgstr "Afbeeldingen beheren"
+msgstr "Gestione delle immagini"
 
