--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Changelog
   [petschki]
 - moved to github
   [petschki]
+- added italian translations
+  [cekk]
 
 4.3 (2012-01-24)
 ----------------
