--- a/src/Products/SimpleAttachment/locales/nl/LC_MESSAGES/simpleattachment.po
+++ b/src/Products/SimpleAttachment/locales/nl/LC_MESSAGES/simpleattachment.po
@@ -53,7 +53,7 @@ msgstr "Uploaden"
 #. Default: "Once an image is uploaded, you can refer to it in your body text by its filename."
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:214
 msgid "help_widget_imagesmanager_upload"
-msgstr "Na het uploaden van eenen afbeelding, kunt u met de bestandsnaam hiernaar linken in de hoofdtekst"
+msgstr "Na het uploaden van een afbeelding, kunt u met de bestandsnaam hiernaar linken in de hoofdtekst."
 
 #. Default: "Select an attachment to add and click 'Upload'"
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:190
@@ -68,7 +68,7 @@ msgstr "Vul een titel in voor de bijlage"
 #. Default: "Once an attachment is uploaded, you can refer to it in your body text by its filename."
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:210
 msgid "help_widgetattachmentsmanager_upload"
-msgstr "Na het uploaden van een bestand, kunt u met de bestandsnaam hiernaar linken in de hoofdtekst"
+msgstr "Na het uploaden van een bestand, kunt u met de bestandsnaam hiernaar linken in de hoofdtekst."
 
 #. Default: "Select an image to add and click 'Upload'"
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:194
