--- a/src/Products/SimpleAttachment/locales/it/LC_MESSAGES/simpleattachment.po
+++ b/src/Products/SimpleAttachment/locales/it/LC_MESSAGES/simpleattachment.po
@@ -114,7 +114,7 @@ msgstr "Immagine"
 
 #. Default: "Go to the document this image is attached to."
 #: ./skins/simpleattachment/imageattachment_view.pt:16
-msgid "label_link_to_origin"
+msgid "label_link_to_image_origin"
 msgstr "Vai al contenuto in cui questa immagine è allegata."
 
 #. Default: "Size"
