--- a/src/Products/SimpleAttachment/locales/nl/LC_MESSAGES/simpleattachment.po
+++ b/src/Products/SimpleAttachment/locales/nl/LC_MESSAGES/simpleattachment.po
@@ -1,10 +1,10 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"PO-Revision-Date: 2011-08-11 06:46+0000\n"
-"Last-Translator: Jean-Paul Ladage <info@zestsoftware.nl>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: Products.SimpleAttachment 5.0\n"
+"POT-Creation-Date: 2016-02-23 15:58+0000\n"
+"PO-Revision-Date: 2016-02-23 16:58+0100\n"
+"Last-Translator: Maurits van Rees <m.van.rees@zestsoftware.nl>\n"
+"Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -32,7 +32,7 @@ msgstr "Bijlage (afbeelding)"
 
 #: ./configure.zcml:30
 msgid "Attachment support"
-msgstr ""
+msgstr "Attachment ondersteuning"
 
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:144
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:148
@@ -51,7 +51,7 @@ msgstr "Verplaats naar boven"
 
 #: ./configure.zcml:30
 msgid "Simple attachment content types and widget"
-msgstr ""
+msgstr "Simpele attachment content types en widget"
 
 #: ./skins/attachment_widgets/widget_attachmentsmanager.pt:203
 #: ./skins/attachment_widgets/widget_imagesmanager.pt:207
@@ -101,7 +101,7 @@ msgstr "Klik hier om het bestand te downloaden"
 #. Default: "File"
 #: ./extenders.py:36
 msgid "label_file"
-msgstr ""
+msgstr "Bestand"
 
 #. Default: "File type"
 #: ./skins/simpleattachment/fileattachment_view.pt:65
@@ -112,12 +112,12 @@ msgstr "Bestandstype"
 #. Default: "Image"
 #: ./extenders.py:72
 msgid "label_image"
-msgstr ""
+msgstr "Afbeelding"
 
 #. Default: "Go to the document this file is attached to."
 #: ./skins/simpleattachment/fileattachment_view.pt:24
 msgid "label_link_to_file_origin"
-msgstr ""
+msgstr "Ga naar het document waar dit bestand een bijlage van is."
 
 #. Default: "Go to the document this image is attached to."
 #: ./skins/simpleattachment/imageattachment_view.pt:23
@@ -147,7 +147,7 @@ msgstr "Afbeeldingen"
 #. Default: "Blob Migration"
 #: ./migration/migration.pt:10
 msgid "migration_title"
-msgstr ""
+msgstr "Blob migratie"
 
 #. Default: "(No file has been uploaded yet)"
 #: ./skins/simpleattachment/fileattachment_view.pt:59
